working type checker

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,5 +1,8 @@
 {
-"version": "0.2.0",
+    // Use IntelliSense to learn about possible attributes.
+    // Hover to view descriptions of existing attributes.
+    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+    "version": "0.2.0",
     "configurations": [
         {
             "name": "Python: Current File",
@@ -8,8 +11,7 @@
             "program": "${file}",
             "console": "integratedTerminal",
             "justMyCode": true,
-            "args": ["interpret",
-            "source_code.txt"]
+            "args": ["interpret", "source_code.txt"]
         }
     ]
 }
